# emerse

./: .gitignore  Dockerfile  Makefile  README.md  ReadME.md  app.py  config.py  docker-compose.yml  main.py  models.py  ner.dvc  predict.py  process_report.py  pyproject.toml  requirements.txt  run.py  test.py  test_functions.py
input/: test_1.json  test_1.jsonl  test_2.json  test_2.jsonl  test_batch.json  test_batch.jsonl  test_ner.jsonl
src/: config.py  main.py  models.py  process_report.py
templates/: mobility_template.html  pathology_template.html  report_template.html
